sidebar - improvements (e.g. added cout of samples per page, added translating) - bug fixes (e.g. heterochronous header event firing preventing language from loading) - some style fixes (e.g. bring language dropdown to foreground so it doesn't get covered by sidebar)

--- a/style.css
+++ b/style.css
@@ -374,7 +374,7 @@ header div {
 .tree-node {
   padding: "0.2em 0";
   margin: 0;
-  cursor: pointer;
+  margin-right: 1em;
 }
 
 .tree-node:hover::after {
